changed styling on posts#new and comments#new, added link to brand in navbar

--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,5 +1,4 @@
 <%= form_for [@post, @comment] do |f| %>
-  <%= f.label :content %>
   <%= f.text_area :content %>
-  <%= f.submit 'Leave Comment' %>
+  <%= f.submit 'Leave Comment', :class => "btn btn-info btn-xs" %>
 <% end %>
