--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,4 +1,5 @@
 <%= form_for [@post, @comment] do |f| %>
+  <%= f.label :content %>
   <%= f.text_area :content %>
   <%= f.submit 'Leave Comment', :class => "btn btn-info btn-xs" %>
 <% end %>
