--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -9,6 +9,7 @@
   </section>
 <% end %>
 <%= form_for @post, html: {multipart: true} do |f| %>
+  <%= f.label :content %>
   <%= f.file_field :image %>
   <%= f.text_area :content %>
   <%= f.submit "Create Post", :class => "btn btn-info btn-xs"  %>
