--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -27,7 +27,7 @@
       <% end %>
     <% if current_user && current_user.id == post.user_id %>
       <%= link_to "Edit", edit_post_path(post), :class => "btn btn-info"  %>
-      <%= link_to "Delete", post_path(post), method: :delete, :class => "btn btn-danger" %>
+      <%= link_to "Delete", post_path(post), method: :delete, :class => "btn btn-danger", :data =>{:confirm=>('Are you sure you want to delete this post?')} %>
     <% end %>
     <%= link_to "Comment", new_post_comment_path(post), :class => "btn btn-info" %>
   <% end %>
