--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -17,7 +17,7 @@
           <li>
           <%= comment.content %>
           <% if current_user && current_user.id == comment.user_id %>
-            <%= link_to "Delete comment", comment_path(comment), method: :delete %>
+            <%= link_to "Delete comment", comment_path(comment), method: :delete, :data =>{:confirm=>('Are you sure you want to delete this comment?')} %>
           <% end %>
           </li>
         <% end %>
