--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,2 +1,4 @@
-<p><%= @post.content%></p>
+<div class="col-md-offset-3">
 <p><%= image_tag @post.image.url(:medium) %></p>
+<p><%= @post.content%></p>
+</div>
